--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,17 @@
 	<version>1.0.0</version>
 	<name>OpenTSDB Client</name>
 
+ <description>
+        metrics reporter for OpenTSDB
+    </description>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<metrics.version>3.1.2</metrics.version>
 		<jersey.version>2.22.1</jersey.version>
 		<mockito.version>2.0.31-beta</mockito.version>
+		<dropwizard.version>0.7.1</dropwizard.version>
 	</properties>
 
 	<dependencies>
@@ -27,6 +32,11 @@
 			<version>2.0.0</version>
 		</dependency>
 		<!-- Metric包 -->
+		<dependency>
+           <groupId>io.dropwizard</groupId>
+           <artifactId>dropwizard-core</artifactId>
+           <version>${dropwizard.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>io.dropwizard.metrics</groupId>
 			<artifactId>metrics-core</artifactId>
